kubernetes/local-manifest-files/dev-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
