kubernetes/local-manifest-files/dev-postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: dev
spec:
  serviceName: postgres   # Headless service name (IMPORTANT)
  replicas: 1
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432

          volumeMounts:
            - name:  postgres-storage
              mountPath: /var/lib/postgresql/data

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
      # volumes:
      #   - name: mongonfsvol
      #     nfs:
      #       server: 18.60.211.27
      #       path: /mnt/nfs_share

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi


---
# create a headless service for the StatefulSet
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: dev
spec:
  clusterIP: None   # Headless
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
