kubernetes/local-manifest-files/dev-application.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fastapi-to-redis
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: redis   # Apply policy to Redis pods

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: fastapi-app   # Only FastAPI allowed
    ports:
    - protocol: TCP
      port: 6379



# app deployment 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      # Wait for DB
      containers:
        # 🔹 Sidecar container (writes every 20 sec)
        - name: writer-sidecar
          image: busybox
          command: ["/bin/sh", "-c"]
          args:
            - |
              while true; do
                echo "Log entry at $(date)" >> log.txt;
                sleep 20;
              done

        - name: fastapi-container
          image: 906353/app2:v2.0.2   # use built image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          # Readiness Probe (when app is ready to serve traffic)
          readinessProbe:
            httpGet:
              path: /health        # change if you have custom health endpoint
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          #  Liveness Probe (restart if app is stuck)
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3


# HPA 
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: fastapi-app
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
