kubernetes/local-manifest-files/eks-application.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fastapi-to-redis
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: redis   # Apply policy to Redis pods

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: fastapi-app   # Only FastAPI allowed
    ports:
    - protocol: TCP
      port: 6379



# app deployment 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      # Wait for DB
      containers:
        # 🔹 Sidecar container (writes every 20 sec)
        - name: writer-sidecar
          image: busybox
          command: ["/bin/sh", "-c"]
          args:
            - |
              while true; do
                echo "Log entry at $(date)" >> log.txt;
                sleep 20;
              done

        - name: fastapi-container
          image: 906353/dr-app:v40   # use built image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          # Readiness Probe (when app is ready to serve traffic)
          readinessProbe:
            httpGet:
              path: /health        # change if you have custom health endpoint
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          #  Liveness Probe (restart if app is stuck)
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3


# HPA 
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: fastapi-hpa
  namespace: dev
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: fastapi-app

  minReplicas: 1
  maxReplicas: 5

  behavior:
    scaleDown:
      stabilizationWindowSeconds: 30
      policies:
        - type: Percent
          value: 50
          periodSeconds: 30
  metrics:
    - type: Resource
      resource:
        name: cpu
        target:
          type: Utilization
          averageUtilization: 60   # scale when CPU > 70%



apiVersion: v1
kind: Service

metadata:
  name: fastapi-service
  namespace: dev

  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"

spec:
  type: LoadBalancer

  selector:
    app: fastapi-app

  ports:
    - port: 80
      targetPort: 8000
